# TEG_2026

./: .env.template  .gitignore  README.md  pyproject.toml
slides/1. Intro/: 1. Intro.pptx
slides/2. Transformers/: 1. Tokenization.pptx  3.3. Transformers - next word prediction.pptx
slides/3. Retrieval Augmented Generation/: 1. RAG - fundamentals.pptx
slides/4. Graphs/: 1. Chains and graphs.pptx
slides/5. Tools and Agents/: 1. Tools and agents.pptx  2. Agents - key concepts.pptx  3. MultiAgent Structures and Agentic Mesh.pptx
slides/6. MCP/: 2. MCP and Agentic AI.pptx
src/: __init__.py
src/1. Intro/: 0_llm_starter.py  1_llm_basics.py  2_Your_own_chatbot.py  README.md  pyproject.toml
src/2. Models/1. Embeddings/: .env.example  1. embeddings_basics.py  README.md  pyproject.toml
src/2. Models/2. LLMs/: .env.example  1. OpenAI - analyze the response object.py  2. Claude - analyze the response object.py  3. Different models with LangChain.py  README.md
src/3. Retrieval Augmented Generation/: README.md  pyproject.toml
src/3. Retrieval Augmented Generation/01_basic_rag/: 1. minimal_rag.py  2. minimal_rag_with_chunking.py  README.md
src/3. Retrieval Augmented Generation/02_vector_stores/: 1_in_memory.py  2_chroma_vectorestore.py  3_faiss_vectorestore.py  README.md
src/3. Retrieval Augmented Generation/03_document_loading/: 1_text_files.py  2_pdf_loading.py  3_web_sources.py  README.md
src/3. Retrieval Augmented Generation/03_document_loading/data/scientists_bios/: Ada Lovelace.txt  Charles Darwin.txt
src/3. Retrieval Augmented Generation/04_advanced_retrieval/: 1_metadata_filtering.py  2_hybrid_search.py  3_query_expansion.py  4_reranking.py  README.md
src/3. Retrieval Augmented Generation/04_advanced_retrieval/data/scientists_bios/: Marie Sklodowska.txt
src/3. Retrieval Augmented Generation/05_rag_evaluation/: 1. RAGAS_Naive_RAG.py  README.md
src/3. Retrieval Augmented Generation/05_rag_evaluation/data/: ground_truth_dataset.json
src/3. Retrieval Augmented Generation/05_rag_evaluation/data/scientists_bios/: Albert Einstein.txt  Isaac Newton.txt
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/: main.py
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/config/: settings.py
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/evaluation/: __init__.py  evaluator.py  ground_truth.py
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/rag_systems/: __init__.py  base_rag.py  hybrid_search_rag.py  metadata_filtering_rag.py  naive_rag.py  query_expansion_rag.py  reranking_rag.py
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/results/: comparison_metrics.csv
src/3. Retrieval Augmented Generation/06_GraphRAG/: .env.example  .gitignore  0_setup.py  1_generate_data.py  2_data_to_knowledge_graph.py  3_query_knowledge_graph.py  4_naive_rag_cv.py  5_compare_systems.py  README.md  docker-compose.yml  end_session.sh  start_session.sh
src/3. Retrieval Augmented Generation/06_GraphRAG/data/RFP/: rfps.json
src/3. Retrieval Augmented Generation/06_GraphRAG/data/programmers/: programmer_profiles.json
src/3. Retrieval Augmented Generation/06_GraphRAG/data/projects/: projects.json
src/3. Retrieval Augmented Generation/06_GraphRAG/results/: comparison_table.md
src/3. Retrieval Augmented Generation/06_GraphRAG/utils/: config.toml  generate_ground_truth.py  test_questions.json
src/3. Retrieval Augmented Generation/07_Your_Project_TalentMatch/: PRD.md  PROJECT_INSTRUCTIONS.md
src/4. Graphs/: .env.example  1_simple graph.py  2_parallel_processes.py  3_map_reduce.py  README.md  pyproject.toml
src/5. Tools and Agents/1_basic_agents/: .env.example  01_openai_function_calling.py  02_langchain_tools_intro.py  03_langgraph_react_agent.py  README.md  pyproject.toml
src/5. Tools and Agents/2_complex_agents/: .env.example  01_graph_based_agent.py  README.md  langgraph.json  pyproject.toml
src/5. Tools and Agents/2_complex_agents/multi_tool_agent_in_studio/: .env.example  README.md  agent.py  main.py  pyproject.toml
src/5. Tools and Agents/2_complex_agents/multi_tool_agent_in_studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/5. Tools and Agents/3_multi_agent_systems/: README.md
src/5. Tools and Agents/3_multi_agent_systems/1. multi-agent-react/: README.md  agent.py  main.py  pyproject.toml  pyproject.toml_org
src/5. Tools and Agents/3_multi_agent_systems/1. multi-agent-react/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/5. Tools and Agents/3_multi_agent_systems/2_research_assistant/: .gitignore  README.md  agent.py  langgraph.json  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/2_research_assistant/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/5. Tools and Agents/3_multi_agent_systems/2_research_assistant/config/: prompts.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_cli/: README.md  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/: .gitignore  README.md
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_wikipedia/: README.md  __main__.py  agent.py  agent_config.toml  agent_tests.py  pyproject.toml
src/6. MCP/: .env.example  1.mcp_demo - interactive copy.py  2.mcp_demo - CLI.py  README.md  pyproject.toml
src/6. MCP/arxiv_server/: arxiv.py  pyproject.toml
src/6. MCP/math_server/: math_server.py  pyproject.toml
src/6. MCP/tavily_server/: pyproject.toml  tavily.py
src/6. MCP/weather_server/: pyproject.toml  weather.py
src/6. MCP/wikipedia_server/: pyproject.toml  wikipedia.py
(+26 files in other folders)
