[project]
name = "mcp-servers"
version = "0.1.0"
description = "Collection of MCP servers for educational purposes"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "math_server/*.py",
    "weather_server/*.py",
    "tavily_server/*.py",
    "arxiv_server/*.py",
    "wikipedia_server/*.py",
]

[tool.uv]
dev-dependencies = []